# auto-greenhouse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
sensor/aero/: AeroSensor.cpp  AeroSensor.h
sensor/air/: AirSensor.h
sensor/water/: WaterSensor.cpp  WaterSensor.h
system/: InformationSystem.cpp  InformationSystem.h
system/aero/: AeroSystem.cpp  AeroSystem.h
system/air/: AirSystem.h
system/water/: WaterSystem.cpp  WaterSystem.h
utils/: Channel.h  Consumer.h  FileMemMap.h  Producer.h  RWLockUtils.h  Reader.h  Semaphore.h  Writer.h
